avimux: write correct blockalign for vbr audio

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=720659